--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ include_directories(src/list)
 add_executable(asmVM
         src/lexer/lexer.c
         src/lexer/lexer.h
-        src/lexer/token.h
+        src/lexer/token/token.h
         src/list/list.h
-        src/asmsim.c src/lexer/stream/stream.c src/list/list.c src/errors/errors.h src/errors/errors.c src/lexer/utils.h src/lexer/utils.c)
+        src/asmsim.c src/lexer/stream/stream.c src/list/list.c src/errors/errors.h src/errors/errors.c src/lexer/utils/utils.h src/lexer/utils/utils.c src/lexer/token/token.c)
