Splitted src and include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(src/list)
 
 add_executable(asmVM
         src/lexer/lexer.c
-        src/lexer/lexer.h
-        src/lexer/token/token.h
-        src/list/list.h
-        src/asmsim.c src/lexer/stream/stream.c src/list/list.c src/errors/errors.h src/errors/errors.c src/lexer/utils/utils.h src/lexer/utils/utils.c src/lexer/token/token.c src/evaluator/program/program.h src/evaluator/program/program.c src/lexer/organizer/organizer.h src/lexer/organizer/organizer.c src/lexer/function/function.c src/lexer/function/function.h src/evaluator/evaluator.h src/evaluator/evaluator.c src/evaluator/memory/memory.h src/evaluator/memory/memory.c src/evaluator/stack/stack.c src/evaluator/stack/stack.h)
+        include/lexer/lexer.h
+        include/lexer/token/token.h
+        include/list/list.h
+        src/asmsim.c src/lexer/stream/stream.c src/list/list.c include/errors/errors.h src/errors/errors.c include/lexer/utils/utils.h src/lexer/utils/utils.c src/lexer/token/token.c include/evaluator/program/program.h src/evaluator/program/program.c include/lexer/organizer/organizer.h src/lexer/organizer/organizer.c src/lexer/function/function.c include/lexer/function/function.h include/evaluator/evaluator.h src/evaluator/evaluator.c include/evaluator/memory/memory.h src/evaluator/memory/memory.c src/evaluator/stack/stack.c include/evaluator/stack/stack.h)
